# stp-bridge

./: .gitignore  Makefile.am  README  TODO  cellmgr_ng.cfg  configure.ac  mgcp_mgw.cfg  osmoappdesc.py
contrib/: TestSender.st  jenkins.sh
debian/: changelog  control  osmo-stp.init  osmo-stp.install  osmo-stp.service  osmocom-cellmgr-ng.install  osmocom-cellmgr-stp.install  posmocom-cellmgr-mgcp-mgw.install  rules
doc/examples/: osmo-stp.cfg
include/: Makefile.am  bsc_data.h  bsc_sccp.h  bsc_ussd.h  bss_patch.h  bssap_sccp.h  cellmgr_debug.h  counter.h  dtmf_scheduler.h  ipaccess.h  isup_types.h  linkset.h  mgcp_patch.h  mgcp_ss7.h  msc_connection.h  mtp_data.h  mtp_level3.h  mtp_pcap.h  sccp_lite.h  sctp_m2ua.h  sctp_m3ua.h  snmp_mtp.h  ss7_application.h  ss7_vty.h  thread.h  udp_input.h  write_queue.h
include/mgcp/: Makefile.am  mgcp.h  mgcp_internal.h
include/openbsc_nat/: Makefile.am  bssap.h  tlv.h
src/: InitHW.c  Makefile.am  bsc.c  bsc_sccp.c  bsc_ussd.c  bss_patch.c  bssap_sccp.c  counter.c  debug.c  dtmf_scheduler.c  isup.c  isup_filter.c  link_udp.c  links.c  linkset.c  main.c  main_stp.c  main_udt.c  mgcp_callagent.c  mgcp_hw.c  mgcp_patch.c  mgcp_snmp.c  mgcp_ss7.c  mgcp_ss7_vty.c  msc_conn.c  mtp_layer3.c  mtp_link.c  pcap.c  sccp_lite.c  sccp_state.c  sctp_m2ua.c  sctp_m3ua_client.c  snmp_mtp.c  ss7_application.c  thread.c  vty_interface.c  vty_interface_cmds.c  vty_interface_legacy.c  write_queue.c
src/input/: ipaccess.c
src/mgcp/: README  mgcp_network.c  mgcp_protocol.c  mgcp_vty.c
src/openbsc_nat/: README  bssap.c  tlv_parser.c
tests/: Makefile.am  testsuite.at
tests/dtmf/: Makefile.am  dtmf_test.c
tests/isup/: Makefile.am  isup_parse_test.c  isup_parse_test.ok
tests/mgcp/: Makefile.am  mgcp_patch_test.c  mgcp_patch_test.ok
tests/mtp/: Makefile.am  mtp_parse_test.c
tests/patching/: Makefile.am  patching_test.c  patching_test.ok
