noinst_HEADERS = mtp_level3.h mtp_data.h ipaccess.h thread.h mtp_pcap.h \
		 mgcp_ss7.h bss_patch.h bssap_sccp.h bsc_data.h udp_input.h \
                 snmp_mtp.h cellmgr_debug.h bsc_sccp.h bsc_ussd.h sctp_m2ua.h \
                 isup_types.h counter.h msc_connection.h ss7_application.h \
                 mgcp_patch.h

SUBDIRS = mgcp
